--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -95,7 +95,7 @@ p <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
 plot0 <- p %>% 
   arrange(CompetitorsInArea) %>% 
   ggplot(aes(x = Year, y = Count, group = CompetitorsInArea, color = CompetitorsInArea)) + ylab("FQHCs") + 
-  geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("FQHCs by Number of Rival Clinics") + 
+  geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("FQHCs by Number of Colocated FQHCs") + 
   geom_dl(label=c(rep("0 Competitors", 25), rep("1 Competitor", 25), rep("2 Competitors", 25), rep("3+ Competitors", 25)), 
           method = list("last.points", hjust = 1, vjust = c(3, 3.5, 4, -2), cex = 1.5), inherit.aes=T ) + 
   guides(colour = "none") 
@@ -485,6 +485,22 @@ p14 <- event_study(data = dfc %>% mutate(outcome = log(Total / Staff)) %>% filte
 p14
 
 ggsave(filename = "Picture14.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p14, width = 17, height = 9)
+
+
+
+
+ event_study(data = dfc %>% mutate(outcome = ngla_revenue / Total),
+  yname = "outcome", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>%
+  #mutate(estimate = exp(estimate), std.error = exp(std.error)) %>% 
+  filter(abs(term) <= 5) %>%
+  filter(estimator == "Gardner (2021)") %>%
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) +
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Event Study - Effects of Competitive Shock on log Ratio of Patients Per Staff Member") + xlab("Year Relative to Competitive Shock") + ylab("log Patients") 
+
+ 
+ 
 
 ```
 
