--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -98,7 +98,8 @@ plot0 <- p %>%
   geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("FQHCs by Number of Colocated FQHCs") + 
   geom_dl(label=c(rep("0 Competitors", 25), rep("1 Competitor", 25), rep("2 Competitors", 25), rep("3+ Competitors", 25)), 
           method = list("last.points", hjust = 1, vjust = c(3, 3.5, 4, -2), cex = 1.5), inherit.aes=T ) + 
-  guides(colour = "none") 
+  guides(colour = "none") +theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold"))
 
 plot1 <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>% 
             group_by(Zip, Year) %>% 
@@ -114,12 +115,13 @@ plot1 <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   ggplot(aes(x = Year, y = Zips, group = Counts.f, color = Counts.f)) + 
   geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("Zip Codes by Number of FQHC Sites") + 
   geom_dl(label=c(rep("1 Site", 25), rep("2+ Sites", 25)), method = list("last.points", hjust = 1, vjust = -1, cex = 1.5), inherit.aes=T ) + 
-  guides(colour = "none") + ylim(0, 4000)
+  guides(colour = "none") + ylim(0, 4000) +theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold"))
 
 
 p.desc <- ggarrange(plot1, plot0, ncol = 1) 
 
-p.desc <- annotate_figure(p.desc, fig.lab = text_grob("FQHC Growth and Density by Zip and Clinic, UDS 1996 to 2021", face = "bold", size = 14))
+p.desc <- annotate_figure(p.desc, top = text_grob("FQHC Growth and Density by Zip and Clinic, UDS 1996 to 2021", face = "bold", size = 14))
 
 ggsave(filename = "Picture1.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p.desc, width = 11, height = 15)
 
@@ -299,7 +301,8 @@ event_study(data = df.core,
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6)+ theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Quality Composite")+ xlab("Year Relative to Competitive Shock") + ylab("Percentage Points") +
-  annotate("text", x=2, y=-2.2, label= label1, parse = TRUE, size = unit(10, "pt")), 
+  annotate("text", x=2, y=-2.2, label= label1, parse = TRUE, size = unit(10, "pt"))+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold")), 
 event_study(data = df.core, 
   yname = "Altman", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) <= 5) %>% 
@@ -308,7 +311,8 @@ event_study(data = df.core,
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Altman's Z Score") + xlab("Year Relative to Competitive Shock") + ylab("Risk Units") +
-  annotate("text", x=2, y=0.4, label= label2, parse = TRUE, size = unit(10, "pt")), common.legend = TRUE, ncol = 2, legend = F) 
+  annotate("text", x=2, y=0.4, label= label2, parse = TRUE, size = unit(10, "pt"))+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold")), common.legend = TRUE, ncol = 2, legend = F) 
 p0.simple
 
 ggsave(filename = "Picture3ahSimple.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0.simple, width = 17, height = 9)
@@ -692,7 +696,8 @@ p2 <- ggarrange(
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Complexity") + xlab("Year Relative to Competitive Shock")  + ylab("Prevalence"), 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Complexity") + xlab("Year Relative to Competitive Shock")  + ylab("Prevalence")+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold")), 
 event_study(data = df.select.stint, 
   yname = "Intensity", idname = "ID", tname = "Year", gname = "Att", estimator = "all", xformla = ~Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless) %>% 
   filter(abs(term) <= 5) %>% 
@@ -700,7 +705,8 @@ event_study(data = df.select.stint,
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold'))+ 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Intensity") + xlab("Year Relative to Competitive Shock") + ylab("Visits"), common.legend = TRUE, legend = F) 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Intensity") + xlab("Year Relative to Competitive Shock") + ylab("Visits")+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold")), common.legend = TRUE, legend = F) 
 p2
 
 
@@ -1886,7 +1892,8 @@ zp3 <- event_study(data = df.spill3 %>% filter((Dist > quantile(Dist, 0.87) & At
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Farthest 13% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Farthest 13% of Zips")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold"))
 
 
 
@@ -1897,7 +1904,8 @@ zp4 <- event_study(data = df.spill3 %>% filter((Dist == 0 & Att > 0) | Att == 0 
   ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9), color = 'goldenrod', size = 3) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.25, position = position_dodge(0.9), color = 'goldenrod', size = 0.8)  +
   #facet_wrap(~V1, scales = "free_y", ncol = 3) +
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="blue", linetype="dashed", alpha=.6) + theme(legend.position = "none", plot.title = element_text(size=18, face='bold')) + 
-  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Hours per Week in Competitive Zip")+ xlab("Year Relative to Competitive Shock") + ylab("Hours per Week")+theme(axis.text=element_text(size=12),
+        axis.title=element_text(size=14,face="bold"))
 
 
 
