--- a/code/manuscript_analysis.Rmd
+++ b/code/manuscript_analysis.Rmd
@@ -42,8 +42,8 @@ options(scipen=999)
 
 
 ```{r}
-dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
-uds.sites.full <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/sites_geocoded.csv") %>%
+dfc <- read_csv("/Users/markow/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
+uds.sites.full <- read_csv("/Users/markow/Dropbox/Git/Competition/data_processed/sites_geocoded.csv") %>%
   mutate(Access = ifelse(`BHCMIS ID` == "080170" & as.numeric(`Total Weekly Hours Of Operation`) > 40000, 4, Access))
 clinics.in.zips <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   #filter(Year >= included.years[1]) %>%
@@ -51,8 +51,8 @@ clinics.in.zips <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   summarise(Clinics = n_distinct(`BHCMIS ID`), Sites = n()) %>%
   arrange(desc(Clinics))
 
-uds.sites.full %>%
-  filter(is.na(Zip))
+ uds.sites.full %>%
+   filter(is.na(Zip))
 
 
 ```
@@ -61,7 +61,7 @@ uds.sites.full %>%
 ```{r}
 
 dfc %>% 
-  filter(Year == 2010) %>% 
+  filter(Year == 2011) %>% 
   mutate(Treat = ifelse(Att > 0, "Treated", "Control")) %>% 
   select(Treat, Total, Pct.NHA:Pct.COM) %>% 
   #filter(!complete.cases(.)) %>% 
@@ -96,7 +96,7 @@ plot0 <- p %>%
   arrange(CompetitorsInArea) %>% 
   ggplot(aes(x = Year, y = Count, group = CompetitorsInArea, color = CompetitorsInArea)) + ylab("FQHCs") + 
   geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("FQHCs by Number of Colocated FQHCs") + 
-  geom_dl(label=c(rep("0 Competitors", 25), rep("1 Competitor", 25), rep("2 Competitors", 25), rep("3+ Competitors", 25)), 
+  geom_dl(label=c(rep("0 Competitors", length(unique(p$Year))), rep("1 Competitor", length(unique(p$Year))), rep("2 Competitors", length(unique(p$Year))), rep("3+ Competitors", length(unique(p$Year)))), 
           method = list("last.points", hjust = 1, vjust = c(3, 3.5, 4, -2), cex = 1.5), inherit.aes=T ) + 
   guides(colour = "none") +theme(axis.text=element_text(size=12),
         axis.title=element_text(size=14,face="bold"))
@@ -114,7 +114,7 @@ plot1 <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   #filter(Year >= 2010) %>% 
   ggplot(aes(x = Year, y = Zips, group = Counts.f, color = Counts.f)) + 
   geom_point(size = 1.1) + geom_line(size = 1.1) + theme_tufte_revised() + ggtitle("Zip Codes by Number of FQHC Sites") + 
-  geom_dl(label=c(rep("1 Site", 25), rep("2+ Sites", 25)), method = list("last.points", hjust = 1, vjust = -1, cex = 1.5), inherit.aes=T ) + 
+  geom_dl(label=c(rep("1 Site", length(unique(p$Year))), rep("2+ Sites", length(unique(p$Year)))), method = list("last.points", hjust = 1, vjust = -1, cex = 1.5), inherit.aes=T ) + 
   guides(colour = "none") + ylim(0, 4000) +theme(axis.text=element_text(size=12),
         axis.title=element_text(size=14,face="bold"))
 
@@ -123,7 +123,7 @@ p.desc <- ggarrange(plot1, plot0, ncol = 1)
 
 p.desc <- annotate_figure(p.desc, top = text_grob("FQHC Growth and Density by Zip and Clinic, UDS 1996 to 2021", face = "bold", size = 14))
 
-ggsave(filename = "Picture1.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p.desc, width = 11, height = 15)
+#ggsave(filename = "Picture1.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p.desc, width = 11, height = 15)
 
 
 
@@ -131,10 +131,13 @@ p.desc <- ggarrange(plot1, plot0, ncol = 2)
 
 p.desc <- annotate_figure(p.desc, top = text_grob("FQHC Growth and Density by Zip and Clinic, UDS 1996 to 2021", face = "bold", size = 14))
 
-ggsave(filename = "Picture1h.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p.desc, width = 16, height = 9)
+#ggsave(filename = "Picture1h.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p.desc, width = 16, height = 9)
 
 
 p.desc
+
+
+
 ```
 
 
@@ -255,7 +258,7 @@ summary(lm(data = df.core %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treat
 summary(lm(data = df.core %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Altman ~ Treated*year.rel))$coeff[4,]
 
 
-ggsave(filename = "Picture3a.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0, width = 9, height =16)
+#ggsave(filename = "Picture3a.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0, width = 9, height =16)
 
 
 p0 <- ggarrange(
@@ -285,7 +288,7 @@ event_study(data = df.core,
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5)  + ggtitle("Financial Resilience") + xlab("Year Relative to Competitive Shock") + ylab("Risk Units"), common.legend = TRUE, ncol = 3 ) 
 p0
 
-ggsave(filename = "Picture3ah.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0, width = 17, height = 9)
+#ggsave(filename = "Picture3ah.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0, width = 17, height = 9)
 
 
 
@@ -315,7 +318,7 @@ event_study(data = df.core,
         axis.title=element_text(size=14,face="bold")), common.legend = TRUE, ncol = 2, legend = F) 
 p0.simple
 
-ggsave(filename = "Picture3ahSimple.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0.simple, width = 17, height = 9)
+#ggsave(filename = "Picture3ahSimple.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p0.simple, width = 17, height = 9)
 
 
 
@@ -494,7 +497,7 @@ p14 <- event_study(data = dfc %>% mutate(outcome = log(Total / Staff)) %>% filte
 
 p14
 
-ggsave(filename = "Picture14.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p14, width = 17, height = 9)
+#ggsave(filename = "Picture14.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p14, width = 17, height = 9)
 
 
 
@@ -715,7 +718,7 @@ summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% muta
 summary(lm(data = df.select.stint %>% filter(!is.na(Tx) & year.rel < 0) %>% mutate(Treated = ifelse(Att > 0, 1, 0)), Intensity ~ Treated*year.rel))$coeff[4,]
 
 
-ggsave(filename = "Picture4.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p2, width = 17, height = 9)
+#ggsave(filename = "Picture4.png", path = "/Users/jhm65/Dropbox/Writing/JMP_figures", plot = p2, width = 17, height = 9)
 
 
 
@@ -1372,7 +1375,7 @@ df.z <- left_join(dfc,
   unique() #%>%  inner_join(df.qual.exp %>% filter(Year == 2015 & Total > 12050) %>% select(`Grant Number`), by = c("Grant Number"))  #& Zips < 3.75 or 4.75
   # %>%   filter(MarketShare > median(MarketShare, na.rm = TRUE) - 0.25) 
 
-df.z <- df.z %>%
+df.z <- df.z %>% 
   left_join(df.z %>%
             filter(Tx.z == 1) %>%
             group_by(ID, Zip) %>%
@@ -1415,7 +1418,7 @@ df.z.dist <- df.z.full %>%
   filter(`BHCMIS ID.x` != `BHCMIS ID.y`) 
 
 ## Read in Centroid Data
-zip.centroids <- read.csv("/Users/jhm65/Dropbox/Git/Data/ZIP_Code_Population_Weighted_Centroids.csv") %>% 
+zip.centroids <- read.csv("/Users/markow/Dropbox/Git/Data/ZIP_Code_Population_Weighted_Centroids.csv") %>% 
   mutate(ZipCode = str_pad(STD_ZIP5, 5, pad = "0")) %>% 
   select(ZipCode, X, Y)
 ## Add missing centroids
@@ -1518,7 +1521,7 @@ df.z.dist.plot %>%
 
 
 
-## Rival selecting where to put new site, takes 30+ minutes to work
+## Rival selecting where to put new site, takes 15+ minutes to work
 
 ```{r}
 
